# validated-solutions-for-cloud-foundation

./: .gitignore  404.html  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  index.html  mkdocs.yml  sitemap.xml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml
.github/workflows/: docs.yml
alb/: README.md
alb/ansible-examples/: .gitignore
alb/orchestrator-examples/: .gitignore
appliance/: .gitignore  Makefile  README.md  appliance-bom.json  appliance-build.sh  appliance-unregister.ps1  appliance.auto.pkrvars.hcl  appliance.definition.pkr.hcl  appliance.json  appliance.ks.pkrtpl.hcl  appliance.locals.pkr.hcl  appliance.sh  appliance.variables.pkr.hcl  appliance.versions.pkr.hcl  override.pkrvars.hcl  photon.auto.pkrvars.hcl  photon.pkr.hcl  photon.pkrtpl.hcl  variables.pkr.hcl
appliance/files/: getOvfProperty.py  rc.local  setup-01-os.sh  setup-02-network.sh  setup-03-banner.sh  (+2 more)
cba/: README.md  cbaTerraformMenu.ps1
cio/: README.md
cmm/: README.md
community/: index.html
docs/: faq.md  index.md  pwsh.md
faq/: index.html
hrm/: .gitignore  CHANGELOG.md  LICENSE  README.md  encrypt-passwords.py  env.json  send-data-to-vrops.py  setup.cfg
hrm/artifacts/vSAN/: Alert_Definitions.xml  Notifications.json  Supermetrics.json
hrm/artifacts/vsan/: Alert_Definitions.xml  Notifications.json  Supermetrics.json
hrm/examples/: run_sos-data-push-vrops.bat
hrm/source/: send-data-to-vrops.py
hrm/source/artifacts/vSAN/: Alert_Definitions.xml  Notifications.json  Supermetrics.json
hrm/source/examples/: run_send-data-to-vrops.bat
hrm/source/main/: encrypt-passwords.py  env.json  notifications-template.json  notifications.py  send-data-to-vrops.py
hrm/source/main/encrypted_files/: encrypted_pwds  key
hrm/source/main/utils/: FolderUtility.py  LogUtility.py  PSUtility.py  SosRest.py
hrm/source/utils/: FolderUtility.py  PSUtility.py  SosRest.py
hrm/utils/: FolderUtility.py  LogUtility.py  PSUtility.py  SosRest.py  SshUtility.py  ssh.py
pca/: README.md
pwsh/: index.html
search/: search_index.json
(+373 files in other folders)
