[metadata]
name = vmware-cloud-foundation-health-monitoring
version = 1.1.0.1003
author = Bhumitra Nagar
author_email = bnagar@vmware.com
description = Python Module for VMware Cloud Foundation Health Monitoring in vRealize Operations
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2-Clause
url = https://github.com/vmware-samples/validated-solutions-for-cloud-foundation/tree/main/hrm
project_urls =
    Bug Tracker = https://github.com/vmware-samples/validated-solutions-for-cloud-foundation/issues
    repository = https://github.com/vmware-samples/validated-solutions-for-cloud-foundation/tree/main/hrm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = source
packages = find:
python_requires = >=3.6
include_package_data = True
   
[options.package_data]
* = *.json, *.bat, *.zip, *.xml

[options.packages.find]
where = source
