[metadata]
name = vmware-cloud-foundation-health-monitoring
version = 2.1.0.1004
author = Broadcom
author_email = bhumitra.nagar@broadcom.com, olga.efremov@broadcom.com
description = Python Module for VMware Cloud Foundation Health Monitoring in VMware Aria Operations
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2-Clause
url = https://github.com/vmware-samples/validated-solutions-for-cloud-foundation/tree/main/hrm
project_urls =
    Issues = https://github.com/vmware-samples/validated-solutions-for-cloud-foundation/issues
    Source = https://github.com/vmware-samples/validated-solutions-for-cloud-foundation/tree/main/hrm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = source
packages = find:
python_requires = >=3.6
include_package_data = True
   
[options.package_data]
* = *.json, *.bat, *.zip, *.xml

[options.packages.find]
where = source
